# agnaldo

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PRD.md  PRD.tmp  README.md  ROADMAP.md  SOUL.md  analisecoderabbit_debug.md  mypy.ini  pyproject.toml  repomix-output.xml  ruff.toml
.claude/agents/: architect-review.md  backend-developer.md  cli-developer.md  cli-ui-designer.md  context7.md  documentation-engineer.md  docusaurus-expert.md  llm-architect.md  mcp-expert.md  python-pro.md  typescript-pro.md  video-editor.md
.claude/commands/: doc-api.md  docs-maintenance.md  load-llms-txt.md
.github/workflows/: test.yml
.omc/: IMPLEMENTACAO_COMPLETA.md  MVP_COMPLETE.md  MVP_PHASE_1_COMPLETE.md  prd.json  progress.txt  project-memory.json
.omc/plans/: architecture-generator-improvements-v2.md  architecture-generator-improvements-v3.md  architecture-generator-improvements.md  coderabbit-64-findings-action-plan.md  coderabbit-findings-remediation.md  concursos-rag-bot-plan.md  open-questions.md
.omc/sessions/: 6c16bb50-e7b1-4520-b67a-a96427b660ea.json  a7c1b5dc-1d43-47c9-ae2d-f60d6b647f7e.json  ac9dedce-2933-40ae-bcbc-42093a18c70a.json  b026c1b8-0cdb-4e71-a2b9-28dca25a117d.json
.omc/state/: agent-replay-4e0a2b35-728c-4a7c-b7ea-dd78b3ea50e4.jsonl  agent-replay-6c16bb50-e7b1-4520-b67a-a96427b660ea.jsonl  agent-replay-a7c1b5dc-1d43-47c9-ae2d-f60d6b647f7e.jsonl  agent-replay-b026c1b8-0cdb-4e71-a2b9-28dca25a117d.jsonl  subagent-tracking.json
agnaldo/: __init__.py
docs/: 01-quickstart.md  02-uso-no-discord.md  03-memoria.md  04-prompts-e-personalidade.md  05-banco-de-dados.md  06-ferramentas-mit.md  07-troubleshooting.md  08-templates-openclaw.md  09-configuracao-discord.md  10-api-reference.md  10-revisao-qualidade-codigo.md  README.md  cleancode-plan-review.md  cleancode-plan.md  knowledge-graph.md  memory-isolation.md
scripts/: __init__.py  ingest_legal_pdfs.py  run_tests.py  run_tests.sh
src/: exceptions.py  main.py
tests/: conftest.py  test_fixtures.py  test_graph.py  test_graph_service.py  test_memory.py  test_memory_isolation.py
(+84 files in other folders)
