[project]
name = "agnaldo"
version = "0.1.0"
description = "Agnaldo Discord bot with knowledge graph capabilities"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "agno>=0.1.0",
    "discord.py>=2.4.0",
    "supabase>=2.7.0",
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "networkx>=3.2.0",
    "tiktoken>=0.7.0",
    "pypdf2>=3.0.0",
    "tenacity>=8.2.0",
    "async-lru>=2.0.0",
    "opentelemetry-api>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-json-report>=1.5.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "faker>=30.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agnaldo", "src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-json-report>=1.5.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "faker>=30.0.0",
]

[tool.uv]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, external deps)",
    "e2e: End-to-end tests (slowest, full stack)",
    "database: Tests requiring database",
    "discord: Tests requiring Discord API mocks",
    "openai: Tests requiring OpenAI API mocks",
]
